// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`标题渲染测试 可选的标题后缀 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <h2
      class="header auto-hide-last-sibling-br"
    >
      foo
    </h2>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`标题渲染测试 各级标题 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <h1
      class="header auto-hide-last-sibling-br"
    >
      foo
    </h1>
    <br
      class="container wrapper non-select"
    />
    

    <h2
      class="header auto-hide-last-sibling-br"
    >
      foo
    </h2>
    <br
      class="container wrapper non-select"
    />
    

    <h3
      class="header auto-hide-last-sibling-br"
    >
      foo
    </h3>
    <br
      class="container wrapper non-select"
    />
    

    <h4
      class="header auto-hide-last-sibling-br"
    >
      foo
    </h4>
    <br
      class="container wrapper non-select"
    />
    

    <h5
      class="header auto-hide-last-sibling-br"
    >
      foo
    </h5>
    <br
      class="container wrapper non-select"
    />
    

    <h6
      class="header auto-hide-last-sibling-br"
    >
      foo
    </h6>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`标题渲染测试 标题中含链接 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <h2
      class="header auto-hide-last-sibling-br"
    >
      prefix
      <a
        class="link"
        href="https://bytedance.com"
        target="_blank"
      >
        link
      </a>
      suffix
    </h2>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`标题渲染测试 禁用的Setext标题 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      Foo 
      <em>
        bar
      </em>
      <br
        class="container wrapper non-select"
      />
      =========
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`标题渲染测试 转义的标题 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      ## foo
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;
